# csstar

./: .gitignore  README.md  arm_toolchains.cmake  build_app.sh  build_core.sh  build_deps.sh
app/: .gitignore  CMakeLists.txt  build_app.sh  main.cpp
app/lib/cscore/lib/: libcscore.1.0.0.dylib  libcscore.1.dylib  libcscore.dylib
app/lib/cscore/lib/cmake/cscore/: cscoreConfig.cmake  cscoreTargets-noconfig.cmake  cscoreTargets.cmake
app/script/: build.sh
app/src/: CMakeLists.txt  main.cpp
core/: .gitignore  CMakeLists.txt  Config.cmake.in  build_core.sh  main.cpp
core/include/: CMakeLists.txt  def.hpp  mqtt.hpp  mqtt_p.hpp
core/samples/base/: CMakeLists.txt
core/src/: CMakeLists.txt
core/src/api/: CMakeLists.txt  mqtt.hpp  result.hpp
core/src/core/: CMakeLists.txt  def.hpp
core/src/mqtt/: CMakeLists.txt  mqtt.cpp  mqtt.hpp  mqtt_p.cpp  mqtt_p.hpp
cppdemo/: CMakeLists.txt  Config.cmake.in  main.cpp
cppdemo/sdk/: CMakeLists.txt  sdk.cpp  sdk.hpp
cppdemo_test/: CMakeLists.txt  main.cpp
jbcore/: .clang-format  .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE
jbcore/include/: CMakeLists.txt  def.hpp  mqtt.hpp  mqtt_p.hpp  ptr.hpp  qrcode.hpp  qrcode_p.hpp  result.hpp
jbcore/samples/: CMakeLists.txt
jbcore/samples/base/: main.cpp
jbcore/samples/mqtt/: CMakeLists.txt  main.cpp
jbcore/samples/ptr/: CMakeLists.txt  main.cpp
jbcore/samples/qrcode/: CMakeLists.txt  main.cpp
jbcore/script/: build.sh  build_debug.sh  build_release.sh
jbcore/src/: CMakeLists.txt
jbcore/src/impl/: CMakeLists.txt  mqtt.cpp  qrcode.cpp
jbcore/src/mqtt/: mqtt_p.cpp
jbcore/src/p/: CMakeLists.txt  mqtt_p.cpp  qrcode_p.cpp
jbcore/src/qrcode/: CMakeLists.txt  qrcode_p.cpp
